fix: remove overflow hidden from laptop

--- a/src/styles/_components.site-nav.scss
+++ b/src/styles/_components.site-nav.scss
@@ -48,6 +48,7 @@
 
   @include mq($from: 'laptop') {
     height: auto; /* [2] */
+    overflow: visible; /* [2] */
     position: static; /* [2] */
     visibility: visible; /* [2] */
     width: auto; /* [2] */
